--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -15,6 +15,9 @@ include: package:very_good_analysis/analysis_options.yaml
 
 # Uncomment the following section to specify additional rules.
 
+formatter: 
+  trailing_commas: preserve
+
 linter:
   rules:
     
