--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,7 +23,13 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        platform: [vm, chrome]
+        include: 
+          - platform: vm
+            compiler: kernel
+          - platform: chrome
+            compiler: dart2js
+          - platform: chrome
+            compiler: dart2wasm
     steps:
       - name: Clone repository 
         uses: actions/checkout@v4
@@ -43,4 +49,4 @@ jobs:
         run: dart analyze --fatal-infos
 
       - name: Run tests
-        run: dart test --platform ${{ matrix.platform }}
+        run: dart test --platform ${{ matrix.platform }} --compiler ${{ matrix.compiler }}
